==> gerioldman/openblt/Target/Source/RISCV_CH32V30x/mbrtu.c <==
#include "boot.h"                                /* bootloader generic header          */
#include "ch32v30x.h"
#define MBRTU_BYTE_TX_TIMEOUT_MS          (10u)
#define USART_CHANNEL   USART1
#define USART_CHANNEL   USART2
#define USART_CHANNEL   USART3
#define USART_CHANNEL   UART4
#define USART_CHANNEL   UART5
#define USART_CHANNEL   USART6
#define USART_CHANNEL   UART7
#define USART_CHANNEL   UART8

void MbRtuInit(void)
{
  blt_int16u startTimeTicks;
  blt_int16u deltaTimeTicks;
  blt_int16u currentTimeTicks;
  blt_int8u  rxDummy;

  /* calculate the 3.5 character delay time in free running counter ticks. note that
   * the free running counter runs at 100 kHz, so one tick is 10 us. For baudrates >
   * 19200 bps, it can be fixed to 1750 us.
   */
  if (BOOT_COM_MBRTU_BAUDRATE > 19200)
  {
    /* set T3_5 time to a fixed value of 1750 us. */
    mbRtuT3_5Ticks = 175;
  }
  /* calculate the T3_5 time, because the baudrate is <= 19200 bps. */
  else
  {
    /* T3_5 [us * 10] = 3.5 * Tchar = 3.5 * 11 * 100000 / baudrate = 3850000 / baudrate.
     * make sure to do integer round up though. Make sure to add 1 to adjust for 10us
     * timer resolution inaccuracy.
     */
    mbRtuT3_5Ticks = (blt_int16u)(((3850000UL + (BOOT_COM_MBRTU_BAUDRATE - 1U)) /
                                    BOOT_COM_MBRTU_BAUDRATE) + 1);
  }

  /* Initialize free running 100kHz timer */
  RCC_APB1PeriphClockCmd( RCC_APB1Periph_TIM6, ENABLE );

  RCC_ClocksTypeDef RCC_Clocks;
  RCC_GetClocksFreq(&RCC_Clocks);

  uint32_t TIM_Prescaler = (RCC_Clocks.PCLK1_Frequency / 100000u) -1u;
  uint16_t TIM_ClockDivision = TIM_CKD_DIV1;

  TIM_TimeBaseInitTypeDef TIM_TimeBaseInitStruct = {
    /* TIM_Prescaler */         TIM_Prescaler,
    /* TIM_CounterMode */       TIM_CounterMode_Up,
    /* TIM_Period */            0xFFFF,
    /* TIM_ClockDivision */     TIM_ClockDivision,
    /* TIM_RepetitionCounter */ 0u /* Value is don't care for TIM2 */
  };
  TIM_TimeBaseInit(TIM6, &TIM_TimeBaseInitStruct);
  TIM_Cmd (TIM6, ENABLE);

  /* Initialize pins and UART peripheral */
  GPIO_InitTypeDef  GPIO_InitStructure;
  USART_InitTypeDef USART_InitStructure;

#if(BOOT_COM_MBRTU_CHANNEL_INDEX == 0)
  RCC_APB2PeriphClockCmd(RCC_APB2Periph_USART1 | RCC_APB2Periph_GPIOA, ENABLE);

  GPIO_InitStructure.GPIO_Pin = GPIO_Pin_9;
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
  GPIO_Init(GPIOA, &GPIO_InitStructure);
#elif(BOOT_COM_MBRTU_CHANNEL_INDEX == 1)
  RCC_APB1PeriphClockCmd(RCC_APB1Periph_USART2, ENABLE);
  RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOA, ENABLE);

  GPIO_InitStructure.GPIO_Pin = GPIO_Pin_2;
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
  GPIO_Init(GPIOA, &GPIO_InitStructure);
#elif(BOOT_COM_MBRTU_CHANNEL_INDEX == 2)
  RCC_APB1PeriphClockCmd(RCC_APB1Periph_USART3, ENABLE);
  RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOB, ENABLE);

  GPIO_InitStructure.GPIO_Pin = GPIO_Pin_10;
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
  GPIO_Init(GPIOB, &GPIO_InitStructure);
#elif(BOOT_COM_MBRTU_CHANNEL_INDEX == 3)
  RCC_APB1PeriphClockCmd(RCC_APB1Periph_UART4, ENABLE);
  RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOC, ENABLE);

  GPIO_InitStructure.GPIO_Pin = GPIO_Pin_10;
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
  GPIO_Init(GPIOC, &GPIO_InitStructure);
#elif(BOOT_COM_MBRTU_CHANNEL_INDEX == 4)
  RCC_APB1PeriphClockCmd(RCC_APB1Periph_UART5, ENABLE);
  RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOB, ENABLE);

  GPIO_InitStructure.GPIO_Pin = GPIO_Pin_4;
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
  GPIO_Init(GPIOB, &GPIO_InitStructure);
#elif(BOOT_COM_MBRTU_CHANNEL_INDEX == 5)
  RCC_APB1PeriphClockCmd(RCC_APB1Periph_UART6, ENABLE);
  RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOB, ENABLE);

  GPIO_InitStructure.GPIO_Pin = GPIO_Pin_8;
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
  GPIO_Init(GPIOB, &GPIO_InitStructure);
#elif(BOOT_COM_MBRTU_CHANNEL_INDEX == 6)
  RCC_APB1PeriphClockCmd(RCC_APB1Periph_UART7, ENABLE);
  RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOC, ENABLE);

  GPIO_InitStructure.GPIO_Pin = GPIO_Pin_2;
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
  GPIO_Init(GPIOC, &GPIO_InitStructure);
#elif(BOOT_COM_MBRTU_CHANNEL_INDEX == 7)
  RCC_APB1PeriphClockCmd(RCC_APB1Periph_UART8, ENABLE);
  RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOC, ENABLE);

  GPIO_InitStructure.GPIO_Pin = GPIO_Pin_4;
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
  GPIO_Init(GPIOC, &GPIO_InitStructure);
#endif

  USART_InitStructure.USART_BaudRate = BOOT_COM_MBRTU_BAUDRATE;
#if(BOOT_COM_MBRTU_STOPBITS == 1)
  USART_InitStructure.USART_StopBits = USART_StopBits_1;
#elif(BOOT_COM_MBRTU_STOPBITS == 2)
  USART_InitStructure.USART_StopBits = USART_StopBits_2;
#endif
#if(BOOT_COM_MBRTU_PARITY == 0)
  USART_InitStructure.USART_WordLength = USART_WordLength_8b;
  USART_InitStructure.USART_Parity = USART_Parity_No;
#elif(BOOT_COM_MBRTU_PARITY == 1)
  USART_InitStructure.USART_WordLength = USART_WordLength_9b;
  USART_InitStructure.USART_Parity = USART_Parity_Odd;
#elif(BOOT_COM_MBRTU_PARITY == 2)
  USART_InitStructure.USART_WordLength = USART_WordLength_9b;
  USART_InitStructure.USART_Parity = USART_Parity_Even;
#endif
  USART_InitStructure.USART_HardwareFlowControl = USART_HardwareFlowControl_None;
  USART_InitStructure.USART_Mode = USART_Mode_Tx | USART_Mode_Rx;

  USART_Init(USART_CHANNEL, &USART_InitStructure);
  USART_Cmd(USART_CHANNEL, ENABLE);

  /* enable the receiver output to be able to receive. */
  MbRtuDriverOutputControlHook(BLT_FALSE);

  /* wait for idle line detection. This is T3_5 time after reception of the last byte. */
  startTimeTicks = MbRtuFreeRunningCounterGet();
  do
  {
    /* service the watchdog. */
    CopService();
    /* get the current value of the free running counter. */
    currentTimeTicks = MbRtuFreeRunningCounterGet();
    /* check if a byte was received while waiting for the idle line. */
    if (MbRtuReceiveByte(&rxDummy) == BLT_TRUE)
    {
      /* restart the idle line detection. */
      startTimeTicks = currentTimeTicks;
    }
    /* calculate the number of ticks that elapsed since the start or since the last
     * byte reception. Note that this calculation works, even if the free running counter
     * overflowed.
     */
    deltaTimeTicks = currentTimeTicks - startTimeTicks;
  }
  while (deltaTimeTicks < mbRtuT3_5Ticks);
}

static blt_bool MbRtuReceiveByte(blt_int8u *data)
{
  blt_bool result = BLT_FALSE;

  /* TODO ##Port Check if a new byte was received on the configured channel. This is
   * typically done by checking the reception register not empty flag. 
   */
  if (USART_GetFlagStatus(USART_CHANNEL, USART_FLAG_RXNE) == SET)
  {
    /* update the result */
    result = BLT_TRUE;
    /* Check for a frame error. This is typically done by checking the frame
     * error bit in a UART status or error register. The frame error check is important
     * because it can detect a missing stopbit. On an RS485 bus without bias resistors,
     * the A-B differential voltage is 0. For an RS485 transceiver this is neither a 0
     * nor a 1 bit, so undefined. Most RS485 transceivers feature a reception failsafe
     * function to drive the Rx output (going to the UART Rx) to a defined state of logic
     * 1. In case the used RS485 transceiver doesn't have such a feature, it typically
     * leaves the Rx output in a logic 0 state. This means that after the stop bit of the
     * last packet byte, the UART Rx input sees a logic 0, and assumes it is a start bit.
     * The remaining data bits will always be 0 and, most importantly no stop bit is
     * present, causing a framing error. Long story short: if you don't check for the
     * framing error flag, you might receive an extra byte with value 0, which is not
     * actually transmitted on the RS485 bus. You can catch and ignore this byte by doing
     * a frame error check.
     */
    if (USART_GetFlagStatus(USART_CHANNEL, USART_FLAG_FE) == SET)
    {
      /* clear the error flag. */
      USART_ClearFlag(USART_CHANNEL, USART_FLAG_FE);
      /* ignore the byte because of a detected frame error. */
      result = BLT_FALSE;
    }
    #if (BOOT_COM_MBRTU_PARITY > 0)
    /* TODO ##Port Check if a parity error. This is typically done by checking the parity
     * error bit in the UART status or error register.
     */
    if (USART_GetFlagStatus(USART_CHANNEL, USART_FLAG_PE) == SET)
    {
      /* clear the error flag. */
      USART_ClearFlag(USART_CHANNEL, USART_FLAG_PE);
      /* ignore the byte because of a detected frame error. */
      result = BLT_FALSE;
    }
    #endif
    /* retrieve and store the newly received byte */
    *data = USART_ReceiveData(USART_CHANNEL);
  }
  /* give the result back to the caller */
  return result;
}

static void MbRtuTransmitByte(blt_int8u data, blt_bool end_of_packet)
{
  blt_int32u timeout;

  USART_SendData(USART_CHANNEL, data);

  /* set timeout time to wait for transmit completion. */
  timeout = TimerGet() + MBRTU_BYTE_TX_TIMEOUT_MS;

  /* not the last byte of the packet? */
  if (end_of_packet == BLT_FALSE)
  {
    /* wait for tx holding register to be empty */
    while (USART_GetFlagStatus(USART_CHANNEL, USART_FLAG_TXE) == RESET)
    {
      /* keep the watchdog happy. */
      CopService();
      /* break loop upon timeout. this would indicate a hardware failure. */
      if (TimerGet() > timeout)
      {
        break;
      }
    }
  }
  /* this is the last byte of a packet. */
  else
  {
    /* wait for tx complete flag to be set. this is needed for the last byte, otherwise
     * the transceiver's transmit output gets disabled with 
     * MbRtuDriverOutputControlHook() before the byte reception completes. 
     */
    while (USART_GetFlagStatus(USART_CHANNEL, USART_FLAG_TC) == RESET)
    {
      /* keep the watchdog happy. */
      CopService();
      /* break loop upon timeout. this would indicate a hardware failure. */
      if (TimerGet() > timeout)
      {
        break;
      }
    }
  }
}

blt_int16u MbRtuFreeRunningCounterGet(void)
{
  blt_int16u result;

  result = TIM_GetCounter(TIM6);

  /* give the result back to the caller. */
  return result;
}
